# shift-client-rs

./: .gitattributes  Cargo.toml  LICENSE-MIT  README.md  crates.js  deny.toml  help.html  rustfmt.toml  search-index.js  settings.html  src-files.js
.github/: dependabot.yml
.github/workflows/: CI.yml  Doc.yml
borderlands_launcher/: all.html  enum.Error.html  enum.Game.html  index.html  sidebar-items.js  struct.AvailableData.html  struct.Client.html  struct.DynamicContentUpdateInfo.html  struct.NewsStory.html
borderlands_launcher/protos/: struct.AvailableData.html  struct.DynamicContentUpdateInfo.html  struct.NewsStory.html
lib/borderlands-launcher/: Cargo.toml  README.md
lib/borderlands-launcher/proto/: launcher.proto
lib/borderlands-launcher/src/: lib.rs
lib/shift-orcz/: Cargo.toml
lib/shift-orcz/src/: client.rs  code.rs  game.rs  lib.rs  shift_code.rs
lib/shift-orcz/src/shift_code/: issue_date.rs
lib/shift-orcz/test_data/: bl-keys.html  bl2-keys.html  bl3-keys.html  blps-keys.html
search.desc/borderlands_launcher/: borderlands_launcher-desc-0-.js
search.desc/shift_client/: shift_client-desc-0-.js
search.desc/shift_orcz/: shift_orcz-desc-0-.js
shift-client/: Cargo.toml
shift-client-cli/: Cargo.toml
shift-client-cli/src/: main.rs  util.rs
shift-client/src/: client.rs  error.rs  lib.rs  main.rs  util.rs
shift-client/src/types/: account_page.rs
shift-client/src/types/rewards/: code_redemption_page.rs
shift_client/: all.html  fn.async_main.html  fn.auto_loop.html  fn.login_client.html  fn.main.html  fn.manual_loop.html  fn.redeem_code.html  fn.redeem_form.html  index.html  sidebar-items.js
shift_client/client/: index.html  struct.Client.html
shift_client/error/: enum.ShiftError.html  index.html  sidebar-items.js  type.InvalidAccountPage.html  type.InvalidCodeRedemptionPageError.html  type.InvalidHomePageError.html  type.RewardFormError.html  type.RewardsPageError.html  type.ShiftResult.html
shift_client/types/: index.html  sidebar-items.js
shift_client/types/account_page/: enum.FromHtmlError.html  index.html  sidebar-items.js  struct.AccountPage.html
shift_client/types/home_page/: enum.FromHtmlError.html  index.html  sidebar-items.js  struct.HomePage.html
shift_client/types/rewards/: index.html  sidebar-items.js
shift_client/types/rewards/code_redemption_json/: index.html  sidebar-items.js  struct.CodeRedemptionJson.html
shift_client/types/rewards/code_redemption_page/: enum.FromHtmlError.html  index.html  sidebar-items.js  struct.CodeRedemptionPage.html
shift_client/types/rewards/reward_form/: enum.FromElementError.html  index.html  sidebar-items.js  struct.RewardForm.html  type.FromHtmlError.html
shift_client/types/rewards/rewards_page/: enum.AlertNotice.html  enum.FromElementError.html  enum.FromHtmlError.html  index.html  sidebar-items.js  struct.RewardsPage.html
shift_client/util/: fn.input.html  fn.input_yn.html  index.html  sidebar-items.js
shift_orcz/: all.html  enum.Game.html  enum.OrczError.html  index.html  sidebar-items.js  struct.Client.html  type.OrczResult.html
shift_orcz/client/: struct.Client.html
shift_orcz/code/: enum.Code.html  enum.FromElementError.html  index.html  sidebar-items.js
shift_orcz/game/: enum.Game.html
shift_orcz/shift_code/: constant.PC_CODE_INDEX.html  constant.PLAYSTATION_CODE_INDEX.html  constant.XBOX_CODE_INDEX.html  enum.FromElementError.html  enum.InvalidIssueDateError.html  index.html  sidebar-items.js  struct.ShiftCode.html
src/: client.rs  error.rs  lib.rs  main.rs  types.rs  util.rs
src/borderlands_launcher/: lib.rs.html
src/shift_client/: client.rs.html  error.rs.html  lib.rs.html  main.rs.html  types.rs.html  util.rs.html
src/shift_client/types/: account_page.rs.html  home_page.rs.html  rewards.rs.html
src/shift_client/types/rewards/: code_redemption_json.rs.html  code_redemption_page.rs.html  reward_form.rs.html  rewards_page.rs.html
src/shift_orcz/: client.rs.html  code.rs.html  game.rs.html  lib.rs.html  shift_code.rs.html
src/types/: account.html  account_page.rs  home_page.rs  rewards.rs
src/types/rewards/: code_redemption_json.rs  code_redemption_json_1.json  code_redemption_json_2.json  code_redemption_page.rs  code_redemption_page_html.html  reward_form.rs  reward_form_1.html  rewards_page.rs  rewards_page_1.html
test_data/: home.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/prost/message/: trait.Message.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde/ser/: trait.Serialize.js
type.impl/core/result/: enum.Result.js
type.impl/shift_client/types/account_page/: enum.FromHtmlError.js
type.impl/shift_client/types/home_page/: enum.FromHtmlError.js
type.impl/shift_client/types/rewards/code_redemption_page/: enum.FromHtmlError.js
type.impl/shift_client/types/rewards/reward_form/: enum.FromElementError.js  type.FromHtmlError.js
type.impl/shift_client/types/rewards/rewards_page/: enum.FromHtmlError.js
