[package]
name = "shift-client"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]         
name = "shift-client"    
required-features = [ "cli" ]

[dependencies]
once_cell = "1.16.0"
reqwest = { version = "0.11.13", default-features = false, features = [ "cookies", "json" ] }
scraper = { version = "0.14.0", default-features = false }
serde = { version = "1.0.151", features = [ "derive" ] }
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = [ "time" ] }

# Optional
anyhow = { version = "1.0.68", optional = true }
shift-orcz = { path = "lib/shift-orcz", optional = true }

[dev-dependencies]
tokio = { version = "1.23.0", features = [ "macros" ] }

[features]
default = [ "reqwest/rustls-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]

cli = [ 
    "anyhow",
    "shift-orcz", 
    "tokio/rt-multi-thread",
]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"

[workspace]
members = [ 
    "lib/shift-orcz",
]
