[package]
name = "shift-client-cli"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]         
name = "shift-client"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.89"
reqwest = { version = "0.12.8", default-features = false }
shift-client = { version = "0.0.0", path = "../shift-client" }
shift-orcz = { version = "0.0.0", path = "../lib/shift-orcz" }
tokio = { version = "1.40.0", features = [ "time", "rt-multi-thread" ] }
