[package]
name = "shift-client"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
once_cell = "1.20.1"
reqwest = { version = "0.12.7", default-features = false, features = [ "cookies", "json" ] }
scraper = { version = "0.20.0", default-features = false }
serde = { version = "1.0.210", features = [ "derive" ] }
serde_json = "1.0.127"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = [ "time" ] }

[dev-dependencies]
tokio = { version = "1.40.0", features = [ "macros" ] }

[features]
default = [ "reqwest/rustls-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]
