[package]
name = "shift-client"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
once_cell = "1.20.2"
reqwest = { version = "0.12.9", default-features = false, features = [ "cookies", "json" ] }
scraper = { version = "0.21.0", default-features = false }
serde = { version = "1.0.214", features = [ "derive" ] }
serde_json = "1.0.132"
thiserror = "2.0.0"
tokio = { version = "1.41.1", features = [ "time" ] }

[dev-dependencies]
tokio = { version = "1.41.1", features = [ "macros" ] }

[features]
default = [ "reqwest/rustls-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]
