[package]
name = "borderlands-launcher"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "generate-protobuf-files"
required-features = [ "generate-protobuf-files" ]

[dependencies]
async-compression = { version = "0.4.12", features = [ "tokio", "gzip" ], default-features = false }
bytes = { version = "1.7.0", default-features = false }
futures-util = { version = "0.3.30", default-features = false }
prost = "0.13.1"
reqwest = { version = "0.12.5", features = [ "gzip", "deflate", "stream" ], default-features = false }
thiserror = "1.0.63"
tokio = { version = "1.40.0", default-features = false }
tokio-util = { version = "0.7.11", features = [ "io" ], default-features = false }

# Optional
anyhow = { version = "1.0.86", optional = true }
prost-build = { version = "0.13.1", optional = true }

[dev-dependencies]
tokio = { version = "1.40.0", features = ["macros"] }

[features]
default = ["rustls-tls"]

native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

generate-protobuf-files = ["anyhow", "prost-build"]
