[package]
name = "borderlands-launcher"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "generate-protobuf-files"
required-features = [ "generate-protobuf-files" ]

[dependencies]
async-compression = { version = "0.4.17", features = [ "tokio", "gzip" ], default-features = false }
bytes = { version = "1.8.0", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
prost = "0.13.3"
reqwest = { version = "0.12.9", features = [ "gzip", "deflate", "stream" ], default-features = false }
thiserror = "2.0.0"
tokio = { version = "1.41.1", default-features = false }
tokio-util = { version = "0.7.12", features = [ "io" ], default-features = false }

# Optional
anyhow = { version = "1.0.93", optional = true }
prost-build = { version = "0.13.3", optional = true }

[dev-dependencies]
tokio = { version = "1.41.1", features = ["macros"] }

[features]
default = ["rustls-tls"]

native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

generate-protobuf-files = ["anyhow", "prost-build"]
