[package]
name = "borderlands-launcher"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "generate-protobuf-files"
required-features = [ "generate-protobuf-files" ]

[dependencies]
async-compression = { version = "0.4.18", features = [ "tokio", "gzip" ], default-features = false }
bytes = { version = "1.9.0", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
prost = "0.13.4"
reqwest = { version = "0.12.12", features = [ "gzip", "deflate", "stream" ], default-features = false }
thiserror = "2.0.9"
tokio = { version = "1.42.0", default-features = false }
tokio-util = { version = "0.7.13", features = [ "io" ], default-features = false }

# Optional
anyhow = { version = "1.0.95", optional = true }
prost-build = { version = "0.13.4", optional = true }

[dev-dependencies]
tokio = { version = "1.42.0", features = ["macros"] }

[features]
default = ["rustls-tls"]

native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

generate-protobuf-files = ["anyhow", "prost-build"]
