[package]
name = "shift-orcz"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
once_cell = "1.19.0"
regex = "1.10.6"
reqwest = { version = "0.12.5", default-features = false }
scraper = { version = "0.20.0", default-features = false }
thiserror = "1.0.63"
time = { version = "0.3.36", features = [ "parsing", "macros" ] }
tokio = { version = "1.40.0", features = [ "rt" ] }

[dev-dependencies]
tokio = { version = "1.40.0", features = [ "macros" ] }

[features]
default = ["reqwest/rustls-tls"]

native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
