[package]
name = "shift-orcz"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
once_cell = "1.20.1"
regex = "1.11.0"
reqwest = { version = "0.12.7", default-features = false }
scraper = { version = "0.20.0", default-features = false }
thiserror = "1.0.64"
time = { version = "0.3.36", features = [ "parsing", "macros" ] }
tokio = { version = "1.40.0", features = [ "rt" ] }

[dev-dependencies]
tokio = { version = "1.40.0", features = [ "macros" ] }

[features]
default = ["reqwest/rustls-tls"]

native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
